@@ -69,6 +69,7 @@
 - Fixed incompatible pointer types (salt1 and salt2 buf) in 31700 a3 kernel
 - Fixed incompatible pointer types (salt1 and salt2 buf) in 3730 a3 kernel
 - Fixed minimum password length in module of hash-mode 28200
+- Fixed maximum password length in module/test_module of hash-mode 2410
 - Handle signed/unsigned PDF permission P value for all PDF hash-modes
 - Fixed minimum password length in module of hash-mode 29800
 - Fixed buffer overflow on module_26600.c / module_hash_encode()
